--- a/translations/fi.po
+++ b/translations/fi.po
@@ -315,3 +315,22 @@ msgstr "Etäisyys"
 msgctxt "When newslist component does not have any news to list"
 msgid "No related news."
 msgstr "Ei uutisia tästä aiheesta."
+
+msgctxt "Profile information-menu open button text for screen readers"
+msgid "Open profile information menu"
+msgstr "Avaa käyttäjä-valikko"
+
+msgctxt "Profile information-menu close button text for screen readers"
+msgid "Close profile information menu"
+msgstr "Sulje käyttäjä-valikko"
+
+msgctxt "Log out link on profile dropdown"
+msgid "Log out"
+msgstr "Kirjaudu ulos"
+
+msgctxt "Log in link text on header"
+msgid "Log in"
+msgstr "Kirjaudu"
+
+msgid "You are logged in as "
+msgstr "Olet kirjautuneena käyttäjänimellä "
