LOM-266: LOM-266 Moved the display name variable to the translation

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -316,10 +316,6 @@ msgctxt "When newslist component does not have any news to list"
 msgid "No related news."
 msgstr "Ei uutisia tästä aiheesta."
 
-msgctxt "Profile information-menu open button text for screen readers"
-msgid "Open profile information menu"
-msgstr "Avaa käyttäjä-valikko"
-
 msgctxt "Profile information-menu close button text for screen readers"
 msgid "Close profile information menu"
 msgstr "Sulje käyttäjä-valikko"
@@ -332,5 +328,6 @@ msgctxt "Log in link text on header"
 msgid "Log in"
 msgstr "Kirjaudu"
 
-msgid "You are logged in as "
-msgstr "Olet kirjautuneena käyttäjänimellä "
+msgctxt "Profile information-menu open button text for screen readers"
+msgid "You are logged in as @display_name. Open profile information menu."
+msgstr "Olet kirjautuneena käyttäjänimellä @display_name. Sulje käyttäjä-valikko."
