--- a/translations/sv.po
+++ b/translations/sv.po
@@ -313,10 +313,6 @@ msgctxt "When newslist component does not have any news to list"
 msgid "No related news."
 msgstr "Inga nyheter i ämnet."
 
-msgctxt "Profile information-menu open button text for screen readers"
-msgid "Open profile information menu"
-msgstr "Öppna profilinformationsmenyn"
-
 msgctxt "Profile information-menu close button text for screen readers"
 msgid "Close profile information menu"
 msgstr "Stäng profilinformationsmenyn"
@@ -329,5 +325,6 @@ msgctxt "Log in link text on header"
 msgid "Log in"
 msgstr "Logga in"
 
-msgid "You are logged in as "
-msgstr "Du är inloggad som "
+msgctxt "Profile information-menu open button text for screen readers"
+msgid "You are logged in as @display_name. Open profile information menu."
+msgstr "Du är inloggad som @display_name. Stäng profilinformationsmenyn."
