--- a/translations/sv.po
+++ b/translations/sv.po
@@ -137,11 +137,11 @@ msgid "The site is currently under maintenance"
 msgstr "Vi uppdaterar sidan som bäst"
 
 msgid ""
-"This content is hosted by @video_service_url. To see the content, "
+"This content is hosted by @media_service_url. To see the content, "
 "switch over to the external site or modify your cookie settings to "
 "allow for preference and statistics cookies."
 msgstr ""
-"Det här innehållet hämtas från @video_service_url. För att visa "
+"Det här innehållet hämtas från @media_service_url. För att visa "
 "innehållet krävs att du godkänner webbplatsens cookies. Du kan se "
 "innehållet antingen genom att gå till en extern webbplats eller "
 "genom att ge ditt samtycke till användningen av cookies för "
