--- a/translations/fi.po
+++ b/translations/fi.po
@@ -343,3 +343,63 @@ msgstr "Laajenna alue: "
 msgctxt "The helper text for close accordion visibility button"
 msgid "Close element: "
 msgstr "Sulje alue: "
+
+msgctxt "School search: local search title"
+msgid "Search for your local school"
+msgstr "Etsi lähikoulua"
+
+msgctxt "School search: local search description"
+msgid "Your child's primary comprehensive school, i.e. their local school, is determined based on the child's home address. The local school has a place for all local children. The search will return Finnish- and Swedish- language comprehensive schools"
+msgstr "Lapsen ensisijainen peruskoulu, eli lähikoulu, määräytyy lapsen kotiosoitteen mukaan. Lähikoulussa on paikka kaikille lapsille. Hausta löytyvät suomen- ja ruotsinkieliset peruskoulut."
+
+msgctxt "School search: input helper"
+msgid "Enter the street name and house number"
+msgstr "Kirjoita kadunnimi ja talonumero"
+
+msgctxt "School search: input label"
+msgid "The child's home address"
+msgstr "Lapsen kotiosoite"
+
+msgctxt "School search: results statline"
+msgid "schools"
+msgstr "koulua"
+
+msgctxt "School search: result display"
+msgid "Show the schools on a map"
+msgstr "Näytä koulut kartalla"
+
+msgctxt "School search: result display"
+msgid "Show schools as a list"
+msgstr "Näytä koulut listana"
+
+msgctxt "School search: language options"
+msgid "Language of instruction"
+msgstr "Opetuskieli"
+
+msgctxt "School search: Feature form title"
+msgid "Search with school information"
+msgstr "Etsi koulun tiedoilla"
+
+msgctxt "School search: Feature form description"
+msgid "You can search for a school by name, language of instruction, grade or postal code. Schools can also admit pupils that do not live in the school's admission area, if there are available spaces. Please note that you may have to apply to schools by taking an aptitude test."
+msgstr "Voit etsiä koulua nimen, opetuskielen, luokka-asteen tai postinumeron mukaan. Kouluihin voidaan ottaa myös muita kuin oman oppilaaksiottoalueen oppilaita, mikäli siellä on tilaa. Huomaa, että kouluihin voi joutua hakemaan valintakokeen kautta."
+
+msgctxt "School search: education level"
+msgid "School level"
+msgstr "Kouluaste"
+
+msgctxt "School search: Feature input label"
+msgid "Name or postal code of the school"
+msgstr "Koulun nimi tai postinumero"
+
+msgctxt "No search results"
+msgid "No results"
+msgstr "Ei tuloksia"
+
+msgctxt "School search: education level option"
+msgid "Primary schools (grades 1-6)"
+msgstr "Alakoulut (luokat 1-6)"
+
+msgctxt "School search: education level option"
+msgid "Lower secondary schools (grades 7-9)"
+msgstr "Yläkoulut (luokat 7-9)"
