--- a/translations/sv.po
+++ b/translations/sv.po
@@ -341,3 +341,63 @@ msgstr "Expandera elementet: "
 msgctxt "The helper text for close accordion visibility button"
 msgid "Close element: "
 msgstr "Stäng elementet: "
+
+msgctxt "School search: local search title"
+msgid "Search for your local school"
+msgstr "Sök närskola"
+
+msgctxt "School search: local search description"
+msgid "Your child's primary comprehensive school, i.e. their local school, is determined based on the child's home address. The local school has a place for all local children. The search will return Finnish- and Swedish- language comprehensive schools"
+msgstr "Barnets primära grundskola, dvs. närskolan, bestäms enligt barnets hemadress. I närskolan finns en plats föralla barn. I sökningen finns finsk- ja svenskspråkiga grundskolor."
+
+msgctxt "School search: input helper"
+msgid "Enter the street name and house number"
+msgstr "Fyll i gatuadress och husnummer"
+
+msgctxt "School search: input label"
+msgid "The child's home address"
+msgstr "Barnets hemadress"
+
+msgctxt "School search: results statline"
+msgid "schools"
+msgstr "skolor"
+
+msgctxt "School search: result display"
+msgid "Show the schools on a map"
+msgstr "Visa skolorna på kartan"
+
+msgctxt "School search: result display"
+msgid "Show schools as a list"
+msgstr "Visa skolorna som en lista"
+
+msgctxt "School search: language options"
+msgid "Language of instruction"
+msgstr "Undervisningsspråk"
+
+msgctxt "School search: Feature form title"
+msgid "Search with school information"
+msgstr "Sök på skolans uppgifter"
+
+msgctxt "School search: Feature form description"
+msgid "You can search for a school by name, language of instruction, grade or postal code. Schools can also admit pupils that do not live in the school's admission area, if there are available spaces. Please note that you may have to apply to schools by taking an aptitude test."
+msgstr "Du kan söka skola på namn, undervisningsspråk, årskurs eller postnummer. Skolorna kan också ta emot andra elever än de som bor inom det egna elevupptagningsområdet, om det finns plats. Observera att man kan bli tvungen att söka till skolorna via inträdesprov."
+
+msgctxt "School search: education level"
+msgid "School level'"
+msgstr "Skolstadium"
+
+msgctxt "School search: Feature input label"
+msgid "Name or postal code of the school"
+msgstr "Skolans namn eller postnummer"
+
+msgctxt "No search results"
+msgid "No results"
+msgstr "Inga resultat"
+
+msgctxt "School search: education level option"
+msgid "Primary schools (grades 1-6)"
+msgstr "Grundskolor (år 1-6)"
+
+msgctxt "School search: education level option"
+msgid "Lower secondary schools (grades 7-9)"
+msgstr "Grundskolor (år 7-9)"
