UHF-7420: Add label for the main navigation that is missing and translations for it

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -423,3 +423,7 @@ msgstr "Alakoulut (luokat 1-6)"
 msgctxt "School search: education level option"
 msgid "Lower secondary schools (grades 7-9)"
 msgstr "Yläkoulut (luokat 7-9)"
+
+msgctxt "Aria label fo main navigation"
+msgid "Main navigation"
+msgstr "Päävalikko"
