UHF-7420: Switch language switcher to nav-element, add aria-labelledby attribute instead of aria-label to nav-toggle-dropdown, fix typo

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -424,6 +424,10 @@ msgctxt "School search: education level option"
 msgid "Lower secondary schools (grades 7-9)"
 msgstr "Yläkoulut (luokat 7-9)"
 
-msgctxt "Aria label fo main navigation"
+msgctxt "Aria label for main navigation"
 msgid "Main navigation"
 msgstr "Päävalikko"
+
+msgctxt "Aria label for language switcher"
+msgid "Select site language"
+msgstr "Valitse sivuston kieli"
