--- a/translations/fi.po
+++ b/translations/fi.po
@@ -439,3 +439,11 @@ msgstr "Valitse sivuston kieli"
 msgctxt "The text for close accordion visibility button"
 msgid "Close"
 msgstr "Sulje"
+
+msgctxt "Skip link after the map for the map paragraph"
+msgid "Continue above the map"
+msgstr "Siirry kartan yläpuolelle"
+
+msgctxt "Skip link before the map for the map paragraph"
+msgid "Continue below the map"
+msgstr "Siirry kartan alapuolelle"
