--- a/translations/sv.po
+++ b/translations/sv.po
@@ -437,3 +437,11 @@ msgstr "Välj språk"
 msgctxt "The text for close accordion visibility button"
 msgid "Close"
 msgstr "Stäng"
+
+msgctxt "Skip link after the map for the map paragraph"
+msgid "Continue above the map"
+msgstr "Gå förbi kartan uppåt"
+
+msgctxt "Skip link before the map for the map paragraph"
+msgid "Continue below the map"
+msgstr "Gå förbi kartan nedåt"
