UHF-7116: Change other languages menu structure to use nested ul lists

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -329,8 +329,8 @@ msgid "Close Information in other languages menu"
 msgstr "Sulje tietoa muilla kielillä valikko"
 
 msgctxt "Other languages-navigation"
-msgid "Information in other languages"
-msgstr "Tietoa muilla kielillä"
+msgid "Information in other languages menu"
+msgstr "Tietoa muilla kielillä valikko"
 
 msgctxt "Search: remove item aria label"
 msgid "Remove @item from search results"
