--- a/translations/sv.po
+++ b/translations/sv.po
@@ -327,8 +327,8 @@ msgid "Close Information in other languages menu"
 msgstr "Stäng Information på andra språk meny"
 
 msgctxt "Other languages-navigation"
-msgid "Information in other languages"
-msgstr "Information på andra språk"
+msgid "Information in other languages menu"
+msgstr "Information på andra språk meny"
 
 msgctxt "Search: remove item aria label"
 msgid "Remove @item from search results"
