--- a/translations/fi.po
+++ b/translations/fi.po
@@ -472,6 +472,10 @@ msgctxt "District and project search"
 msgid "Project"
 msgstr "Hanke"
 
+msgctxt "District and project search residential area"
+msgid "Residential area"
+msgstr "Asuinalue"
+
 msgctxt "District and project search form label"
 msgid "Name of residential area or project"
 msgstr "Asuinalueen tai hankkeen nimi"
@@ -527,6 +531,10 @@ msgstr "Hae"
 msgctxt "District and project search"
 msgid "Clear selections"
 msgstr "Tyhjennä valinnat"
+
+msgctxt "District and project search clear selection label"
+msgid "Clear @label selection"
+msgstr "Tyhjennä @label valinnat"
 
 msgctxt "District and project search"
 msgid "search results"
