--- a/translations/sv.po
+++ b/translations/sv.po
@@ -470,6 +470,10 @@ msgctxt "District and project search"
 msgid "Project"
 msgstr "Projekt"
 
+msgctxt "District and project search residential area"
+msgid "Residential area"
+msgstr "Bostadsområdet"
+
 msgctxt "District and project search form label"
 msgid "Name of residential area or project"
 msgstr "Namn på bostadsområdet eller projektet"
@@ -525,6 +529,10 @@ msgstr "Sök"
 msgctxt "District and project search"
 msgid "Clear selections"
 msgstr "Töm urvalet"
+
+msgctxt "District and project search clear selection label"
+msgid "Clear @label selection"
+msgstr "Töm urvalet @label"
 
 msgctxt "District and project search"
 msgid "search results"
