--- a/translations/sv.po
+++ b/translations/sv.po
@@ -549,3 +549,67 @@ msgstr "Vad synd! Vi hittade inga resultat med dessa sökvillkor."
 msgctxt "District and project search"
 msgid "Our website currently shows only some of the projects and residential areas of Helsinki. You can try again by removing some of the limiting search terms or by starting over."
 msgstr "På vår webbplats finns för närvarande endast en del av Helsingfors projekt och bostadsområden. Du kan försöka på nytt genom att ta bort något av avgränsningsvillkoren eller genom att börja om från början."
+
+msgctxt "News archive filter results heading"
+msgid "Filter news items"
+msgstr "Filtera nyheter"
+
+msgctxt "News archive heading"
+msgid "All news items"
+msgstr "All nyheter"
+
+msgctxt "News archive heading"
+msgid "News based on your choices"
+msgstr "Nyheter baserat på dina val"
+
+msgctxt "News archive clear button aria label"
+msgid "Clear selection"
+msgstr "Rensa alla"
+
+msgctxt "News archive remove item aria label"
+msgid "Remove item"
+msgstr "Töm valda"
+
+msgctxt "News archive topics label"
+msgid "Topics"
+msgstr "Ämnen"
+
+msgctxt "News archive topics placeholder"
+msgid "All topics"
+msgstr "Alla ämnen"
+
+msgctxt "News archive neighbourhoods label"
+msgid "City disctricts"
+msgstr "Stadsdel"
+
+msgctxt "News archive neighbourhoods placeholder"
+msgid "All city disctricts"
+msgstr "Alla stadsdelar"
+
+msgctxt "News archive groups label"
+msgid "Target groups"
+msgstr "Målgrupper"
+
+msgctxt "News archive groups placeholder"
+msgid "All target groups"
+msgstr "Alla målgrupper"
+
+msgctxt "News archive clear selections"
+msgid "Clear selections"
+msgstr "Töm urvalet"
+
+msgctxt "News archive no results"
+msgid "No results found"
+msgstr "Inga resultat"
+
+msgctxt "News archive open dropdown aria label"
+msgid "Open the combobox"
+msgstr "öppna rullgardinsmenyn"
+
+msgctxt "News RSS feed subscribe link"
+msgid "Subscribe to all news as RSS feed"
+msgstr "Prenumerera på alla nyheter som RSS-flöde"
+
+msgctxt "News RSS feed subscribe link"
+msgid "Subscribe to RSS feed of news based on your choices"
+msgstr "Prenumerera på RSS-flöde med nyheter baserat på dina val"
