--- a/translations/fi.po
+++ b/translations/fi.po
@@ -21,6 +21,18 @@ msgctxt "Content liftup card hit for seeing more information on content page"
 msgid "See details"
 msgstr "Katso tarkemmat tiedot"
 
+msgctxt "Errand service accordion heading"
+msgid "Process"
+msgstr "Asian eteneminen"
+
+msgctxt "Errand service accordion heading"
+msgid "Fees"
+msgstr "Maksut"
+
+msgctxt "Errand service accordion heading"
+msgid "Additional information and links"
+msgstr "Lisätiedot ja linkit"
+
 msgctxt "Errand service detail heading"
 msgid "Processing time"
 msgstr "Käsittelyaika"
@@ -38,8 +50,8 @@ msgid "Additional information"
 msgstr "Lisätiedot"
 
 msgctxt "Errand service detail heading"
-msgid "Additional links"
-msgstr "Lisätietolinkit"
+msgid "Links"
+msgstr "Linkit"
 
 msgctxt "Errand service detail heading"
 msgid "How the process works"
