--- a/translations/sv.po
+++ b/translations/sv.po
@@ -621,3 +621,39 @@ msgstr "Prenumerera på RSS-flöde med nyheter baserat på dina val"
 msgctxt "React search clear selection label"
 msgid "Clear @label selection"
 msgstr "Rensa alla @label"
+
+msgctxt "Service channel type verb"
+msgid "Use electric service"
+msgstr "Använd eltjänst"
+
+msgctxt "Service channel type verb"
+msgid "Fill a form"
+msgstr "Fyll i ett formulär"
+
+msgctxt "Service channel type verb"
+msgid "Call"
+msgstr "Ring upp"
+
+msgctxt "Service channel type verb"
+msgid "Send email"
+msgstr "Skicka epost"
+
+msgctxt "Service channel type verb"
+msgid "Send mail"
+msgstr "Skicka brev"
+
+msgctxt "Service channel default fee override"
+msgid "Normal phone charge"
+msgstr "Normal telefonladdning"
+
+msgctxt "Service channel phone number prefix"
+msgid "Call"
+msgstr "Ring upp"
+
+msgctxt "TPR service channel availability label"
+msgid "Open"
+msgstr "Öppen"
+
+msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
+msgid "The link opens in a new tab"
+msgstr "Länken öppnas i en ny flik"
