--- a/translations/fi.po
+++ b/translations/fi.po
@@ -683,6 +683,18 @@ msgstr "Toimipisteen kotisivut"
 msgid "Additional details"
 msgstr "Lisätiedot"
 
+msgctxt "Service channel type verb"
+msgid "Chat"
+msgstr "Chattaa"
+
+msgctxt "Service channel type verb"
+msgid "Visit"
+msgstr "Vieraile"
+
+msgctxt "Service channel type verb"
+msgid "Visit webpage"
+msgstr "Vieraile verkkosivuilla"
+
 msgctxt "Service channel default fee override"
 msgid "standard telephone charges apply"
 msgstr "normaali puhelumaksu"
