--- a/translations/sv.po
+++ b/translations/sv.po
@@ -676,6 +676,18 @@ msgstr "Enhetens hemsida"
 msgid "Additional details"
 msgstr "Ytterligare detaljer"
 
+msgctxt "Service channel type verb"
+msgid "Chat"
+msgstr "Chatt"
+
+msgctxt "Service channel type verb"
+msgid "Visit"
+msgstr "Besök"
+
+msgctxt "Service channel type verb"
+msgid "Visit webpage"
+msgstr "Besök webbsidan"
+
 msgctxt "Service channel default fee override"
 msgid "standard telephone charges apply"
 msgstr "normalt samtalspris"
