--- a/translations/fi.po
+++ b/translations/fi.po
@@ -644,6 +644,18 @@ msgctxt "Service channel type verb"
 msgid "Send mail"
 msgstr "Lähetä postia"
 
+msgctxt "Service channel type verb"
+msgid "Chat"
+msgstr "Chattaa"
+
+msgctxt "Service channel type verb"
+msgid "Visit"
+msgstr "Vieraile"
+
+msgctxt "Service channel type verb"
+msgid "Visit webpage"
+msgstr "Vieraile verkkosivuilla"
+
 msgctxt "Service channel default fee override"
 msgid "Normal phone charge"
 msgstr "Normaali puhelumaksu"
