--- a/translations/fi.po
+++ b/translations/fi.po
@@ -695,6 +695,10 @@ msgctxt "Service channel type verb"
 msgid "Visit webpage"
 msgstr "Vieraile verkkosivuilla"
 
+msgctxt "Service channel type verb"
+msgid "Send SMS"
+msgstr "Lähetä tekstiviesti"
+
 msgctxt "Service channel default fee override"
 msgid "standard telephone charges apply"
 msgstr "normaali puhelumaksu"
