--- a/translations/sv.po
+++ b/translations/sv.po
@@ -688,6 +688,10 @@ msgctxt "Service channel type verb"
 msgid "Visit webpage"
 msgstr "Besök webbsidan"
 
+msgctxt "Service channel type verb"
+msgid "Send SMS"
+msgstr "Skicka SMS"
+
 msgctxt "Service channel default fee override"
 msgid "standard telephone charges apply"
 msgstr "normalt samtalspris"
