UHF-8719: Added SMS service type that was still missing from the type_verb list

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -656,6 +656,10 @@ msgctxt "Service channel type verb"
 msgid "Visit webpage"
 msgstr "Vieraile verkkosivuilla"
 
+msgctxt "Service channel type verb"
+msgid "Send SMS"
+msgstr "Lähetä tekstiviesti"
+
 msgctxt "Service channel default fee override"
 msgid "Normal phone charge"
 msgstr "Normaali puhelumaksu"
