UHF-8719: Add correct translations and original strings, clean up the styles, change the link classes to match with naming conventions

--- a/translations/sv.po
+++ b/translations/sv.po
@@ -376,7 +376,7 @@ msgstr "Du är inloggad som @display_name. Öppna profilinformationsmenyn."
 
 msgctxt "TPR service channel call charge info"
 msgid "Call charge"
-msgstr "Samtalsavgift"
+msgstr "Samtalets pris"
 
 msgctxt "The helper text for toggle accordion visibility button"
 msgid "Toggle element: "
@@ -682,52 +682,48 @@ msgid "At the moment there is no open hearings for commenting."
 msgstr "För närvarande finns det inga öppna planer för kommentarer."
 
 msgctxt "Service channel type verb"
-msgid "Use electric service"
-msgstr "Använd eltjänst"
+msgid "Use the online service"
+msgstr "Uträtta ärenden på webben"
 
 msgctxt "Service channel type verb"
-msgid "Fill a form"
-msgstr "Fyll i ett formulär"
+msgid "Fill in a form"
+msgstr "Fyll i blankett"
 
 msgctxt "Service channel type verb"
-msgid "Call"
-msgstr "Ring upp"
+msgid "Call us"
+msgstr "Ring"
 
 msgctxt "Service channel type verb"
-msgid "Send email"
-msgstr "Skicka epost"
+msgid "Send us an email"
+msgstr "Skicka e-post"
 
 msgctxt "Service channel type verb"
-msgid "Send mail"
-msgstr "Skicka brev"
+msgid "Send us mail"
+msgstr "Skicka post"
 
 msgctxt "Service channel type verb"
-msgid "Chat"
-msgstr "Chatt"
+msgid "Ask in the chat"
+msgstr "Fråga i chatten"
 
 msgctxt "Service channel type verb"
-msgid "Visit"
-msgstr "Besök"
+msgid "Visit us"
+msgstr "Sköta ärenden på plats"
 
 msgctxt "Service channel type verb"
-msgid "Visit webpage"
-msgstr "Besök webbsidan"
+msgid "Online information"
+msgstr "Information på webben"
 
 msgctxt "Service channel type verb"
-msgid "Send SMS"
-msgstr "Skicka SMS"
+msgid "Send a text message"
+msgstr "Skicka textmeddelande"
 
 msgctxt "Service channel default fee override"
-msgid "Normal phone charge"
-msgstr "Normal telefonladdning"
+msgid "Standard telephone charges apply"
+msgstr "Normalt samtalspris"
 
 msgctxt "Service channel phone number prefix"
 msgid "Call"
 msgstr "Ring upp"
-
-msgctxt "TPR service channel availability label"
-msgid "Open"
-msgstr "Öppen"
 
 msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
 msgid "The link opens in a new tab"
