--- a/translations/fi.po
+++ b/translations/fi.po
@@ -378,7 +378,7 @@ msgstr "Olet kirjautuneena käyttäjänimellä @display_name. Avaa käyttäjäva
 
 msgctxt "TPR service channel call charge info"
 msgid "Call charge"
-msgstr "Puhelumaksu"
+msgstr "Puhelun hinta"
 
 msgctxt "The helper text for toggle accordion visibility button"
 msgid "Toggle element: "
@@ -690,52 +690,48 @@ msgid "At the moment there is no open hearings for commenting."
 msgstr "Tällä hetkellä ei ole avoimia suunnitelmia kommentoitavaksi."
 
 msgctxt "Service channel type verb"
-msgid "Use electric service"
+msgid "Use the online service"
 msgstr "Asio verkossa"
 
 msgctxt "Service channel type verb"
-msgid "Fill a form"
+msgid "Fill in a form"
 msgstr "Täytä lomake"
 
 msgctxt "Service channel type verb"
-msgid "Call"
+msgid "Call us"
 msgstr "Soita"
 
 msgctxt "Service channel type verb"
-msgid "Send email"
+msgid "Send us an email"
 msgstr "Lähetä sähköpostia"
 
 msgctxt "Service channel type verb"
-msgid "Send mail"
+msgid "Send us mail"
 msgstr "Lähetä postia"
 
 msgctxt "Service channel type verb"
-msgid "Chat"
-msgstr "Chattaa"
+msgid "Ask in the chat"
+msgstr "Kysy chatissa"
 
 msgctxt "Service channel type verb"
-msgid "Visit"
-msgstr "Vieraile"
+msgid "Visit us"
+msgstr "Asioi paikan päällä"
 
 msgctxt "Service channel type verb"
-msgid "Visit webpage"
-msgstr "Vieraile verkkosivuilla"
+msgid "Online information"
+msgstr "Tietoa verkossa"
 
 msgctxt "Service channel type verb"
-msgid "Send SMS"
+msgid "Send a text message"
 msgstr "Lähetä tekstiviesti"
 
 msgctxt "Service channel default fee override"
-msgid "Normal phone charge"
+msgid "Standard telephone charges apply"
 msgstr "Normaali puhelumaksu"
 
 msgctxt "Service channel phone number prefix"
 msgid "Call"
 msgstr "Soita"
-
-msgctxt "TPR service channel availability label"
-msgid "Open"
-msgstr "Avoinna"
 
 msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
 msgid "The link opens in a new tab"
