UHF-8870: Add missing translations for unit_contact_card and unit_accessibility_information paragraphs

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -632,6 +632,12 @@ msgctxt "React search clear selection label"
 msgid "Clear @label selection"
 msgstr "Tyhjennä @label valinnat"
 
+msgid "Unit homepage"
+msgstr "Toimipisteen kotisivut"
+
+msgid "Additional details"
+msgstr "Lisätiedot"
+
 msgctxt "Hearing activity suffix singular"
 msgid "comment"
 msgstr "kommentti"
