--- a/translations/sv.po
+++ b/translations/sv.po
@@ -595,11 +595,11 @@ msgid "All topics"
 msgstr "Alla ämnen"
 
 msgctxt "News archive neighbourhoods label"
-msgid "City disctricts"
+msgid "City districts"
 msgstr "Stadsdel"
 
 msgctxt "News archive neighbourhoods placeholder"
-msgid "All city disctricts"
+msgid "All city districts"
 msgstr "Alla stadsdelar"
 
 msgctxt "News archive groups label"
@@ -677,3 +677,6 @@ msgstr "Hörandet finns endast på finska"
 msgctxt "Hearing available in languages"
 msgid "Hearing only available in English and Finnish"
 msgstr "Hörandet finns endast på engelska och finska"
+
+msgid "At the moment there is no open hearings for commenting."
+msgstr "För närvarande finns det inga öppna planer för kommentarer."
