--- a/translations/sv.po
+++ b/translations/sv.po
@@ -623,11 +623,11 @@ msgid "All topics"
 msgstr "Alla ämnen"
 
 msgctxt "News archive neighbourhoods label"
-msgid "City disctricts"
+msgid "City districts"
 msgstr "Stadsdel"
 
 msgctxt "News archive neighbourhoods placeholder"
-msgid "All city disctricts"
+msgid "All city districts"
 msgstr "Alla stadsdelar"
 
 msgctxt "News archive groups label"
@@ -657,3 +657,6 @@ msgstr "Prenumerera på alla nyheter som RSS-flöde"
 msgctxt "News RSS feed subscribe link"
 msgid "Subscribe to RSS feed of news based on your choices"
 msgstr "Prenumerera på RSS-flöde med nyheter baserat på dina val"
+
+msgid "At the moment there is no open hearings for commenting."
+msgstr "För närvarande finns det inga öppna planer för kommentarer."
