--- a/translations/sv.po
+++ b/translations/sv.po
@@ -628,11 +628,11 @@ msgid "All topics"
 msgstr "Alla ämnen"
 
 msgctxt "News archive neighbourhoods label"
-msgid "City districts"
+msgid "City disctricts"
 msgstr "Stadsdel"
 
 msgctxt "News archive neighbourhoods placeholder"
-msgid "All city districts"
+msgid "All city disctricts"
 msgstr "Alla stadsdelar"
 
 msgctxt "News archive groups label"
