--- a/translations/sv.po
+++ b/translations/sv.po
@@ -595,11 +595,11 @@ msgid "All topics"
 msgstr "Alla ämnen"
 
 msgctxt "News archive neighbourhoods label"
-msgid "City disctricts"
+msgid "City districts"
 msgstr "Stadsdel"
 
 msgctxt "News archive neighbourhoods placeholder"
-msgid "All city disctricts"
+msgid "All city districts"
 msgstr "Alla stadsdelar"
 
 msgctxt "News archive groups label"
