UHF-8748: UHF-8748: remove outdated translations.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -573,20 +573,8 @@ msgid "Filter news items"
 msgstr "Suodata uutisia"
 
 msgctxt "News archive heading"
-msgid "All news items"
-msgstr "Kaikki uutiset"
-
-msgctxt "News archive heading"
 msgid "News based on your choices"
 msgstr "Uutiset valintojesi perusteella"
-
-msgctxt "News archive clear button aria label"
-msgid "Clear selection"
-msgstr "Tyhjennä kaikki valinnat"
-
-msgctxt "News archive remove item aria label"
-msgid "Remove item"
-msgstr "Poista valinta"
 
 msgctxt "News archive topics label"
 msgid "Topics"
@@ -611,6 +599,10 @@ msgstr "Kohderyhmät"
 msgctxt "News archive groups placeholder"
 msgid "All target groups"
 msgstr "Kaikki kohderyhmät"
+
+msgctxt "News archive no results"
+msgid "No results found"
+msgstr "Ei tuloksia"
 
 msgctxt "News archive clear selections"
 msgid "Clear selections"
