--- a/translations/sv.po
+++ b/translations/sv.po
@@ -570,21 +570,10 @@ msgctxt "News archive filter results heading"
 msgid "Filter news items"
 msgstr "Filtera nyheter"
 
-msgctxt "News archive heading"
-msgid "All news items"
-msgstr "All nyheter"
 
 msgctxt "News archive heading"
 msgid "News based on your choices"
 msgstr "Nyheter baserat på dina val"
-
-msgctxt "News archive clear button aria label"
-msgid "Clear selection"
-msgstr "Rensa alla"
-
-msgctxt "News archive remove item aria label"
-msgid "Remove item"
-msgstr "Töm valda"
 
 msgctxt "News archive topics label"
 msgid "Topics"
@@ -609,6 +598,10 @@ msgstr "Målgrupper"
 msgctxt "News archive groups placeholder"
 msgid "All target groups"
 msgstr "Alla målgrupper"
+
+msgctxt "News archive no results"
+msgid "No results found"
+msgstr "Inga resultat"
 
 msgctxt "News archive clear selections"
 msgid "Clear selections"
