--- a/translations/sv.po
+++ b/translations/sv.po
@@ -643,6 +643,10 @@ msgctxt "News archive groups placeholder"
 msgid "All target groups"
 msgstr "Alla målgrupper"
 
+msgctxt "News archive no results"
+msgid "No results found"
+msgstr "Inga resultat"
+
 msgctxt "News archive clear selections"
 msgid "Clear selections"
 msgstr "Töm urvalet"
