--- a/translations/fi.po
+++ b/translations/fi.po
@@ -656,17 +656,17 @@ msgstr "Aktiivisuus"
 
 msgctxt "Hearings count"
 msgid "plan open for commenting"
-msgid_plural "plans open for commenting"
-msgstr[0] "suunnitelma avoinna kommentoitavaksi"
-msgstr[1] "suunnitelmaa avoinna kommentoitavaksi"
+msgid_plural "hearings open for commenting"
+msgstr[0] "kuuleminen avoinna kommentoitavaksi"
+msgstr[1] "kuulemiset avoinna kommentoitavaksi"
 
-msgctxt "See all plans link text"
-msgid "See all plans"
-msgstr "Katso kaikki suunnitelmat"
+msgctxt "See all hearings link text"
+msgid "See all hearings"
+msgstr "Katso kaikki kuulemiset"
 
-msgctxt "See closed plans link text"
-msgid "See all already closed plans"
-msgstr "Katso jo sulkeutuneet suunnitelmat"
+msgctxt "See closed hearings link text"
+msgid "See all already closed hearings"
+msgstr "Katso jo sulkeutuneet kuulemiset"
 
 msgctxt "Hearing available in languages"
 msgid "Hearing only available in English"
@@ -681,7 +681,7 @@ msgid "Hearing only available in English and Swedish"
 msgstr "Kommentoitavissa vain englanniksi ja ruotsiksi"
 
 msgid "At the moment there is no open hearings for commenting."
-msgstr "Tällä hetkellä ei ole avoimia suunnitelmia kommentoitavaksi."
+msgstr "Tällä hetkellä ei ole avoimia kuulemisia kommentoitavaksi."
 
 msgctxt "Service channel type verb"
 msgid "Use the online service"
