UHF-8211: UHF-8211: add new common error message.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -690,3 +690,7 @@ msgstr "Soita"
 msgctxt "Explanation for users that the link opens in a new tab instead of the expected current tab"
 msgid "The link opens in a new tab"
 msgstr "Linkki avautuu uuteen välilehteen"
+
+msgctxt "React search"
+msgid "An error occured while loading the content. Please reload page."
+msgstr "Sisällön lataamisessa tapahtui virhe. Kokeile ladata sivu uudelleen."
